Fix ol logo stretched in IE (SDK-268)

--- a/quickview/app.css
+++ b/quickview/app.css
@@ -1,3 +1,6 @@
+.ol-attribution img {
+  max-width: 2em;
+}
 body {
   font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
